3. Fixed a bug in slicing_trace(), where the index was float instead of integer.
4. Added get_filelist() and slice_list().

PLOTTING
1. Added plot_eventsequence() to plot event with time.

TYPES
1. Added "side" attribute in CorrData() to mark whether the corrdata is two-sided or one-side only.
2. Revised CorrData.plot() to check "side" attribute when plotting.
3. Added copy() method in CorrData class to allow the user to copy the object, to avoid directly
  modifying the object values.
4. Added split() method in CorrData class to split the negative and positive sides of the data. This
  is needed when the user wants to analyze the two sides separately.
5. Removed ngood attribute from CorrData, corresponding changes have been implemented for other
  functions in "noise".
6. Added subset() method in CorrData() to subset data by time range.
7. Added DvvData class to store dvv monitoring data.

==================================================================================
==================================================================================
Updates in v0.6.2

PLOTTING
1. Added plot_stations() to plot seismic station map using GMT

2. Fixed minor bugs in plot_waveform()

3. Updated plot_corrfile() to take more options, more consistent with CorrData.plot()


DOWNLOADERS
1. Fixed bug in get_event_waveforms() where only one station was downloaded. now it downloads
all station data.

2. Return Stream() for waveform data.

UTILS
1. Added subsetindex()
2. Added points_in_polygon() and generate_points_in_polygon()
3. Added read_gmtlines() to read in line segments in GMT style.
4. Added read_ncmodel3d to read 3-D model files in netCDF format.
5. Added read_ncmodel2d to read 2-D model files in netCDF format.
6. Added ncmodel_in_polygon to extract seismic model within polygons.

TYPES
1. Pushed cc_len and cc_step in CorrData.
2. Added in CorrData.stack() the option to stack over segmented time windows.

SETUP
1. Added requirement for shapely and netCDF4 packages.